# rust_slint_sticky

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
scripts/: dev.sh
src/: lib.rs  main.rs  note.rs  storage.rs
tests/: integration_tests.rs  test_ui_interactions.md
ui/: app.slint
